--- a/wiki/TODO.wiki
+++ b/wiki/TODO.wiki
@@ -1,8 +1,8 @@
 #labels Featured
 = TODO =
 
-This is our wishlist and the next features we want to implement.
+===This is our wish list and the next features we want to implement.===
 
-make main dashboard - dashboard shows only the latest issues and a few charts.  Also has avg & percentile stats
+  * make main dashboard - dashboard shows only the latest issues and a few charts.  Also has avg & percentile stats
 
-make monitor level dashboard - this would show the current monitor only latest issue and up time charts.  avg and percentile stats as well.
+  * make monitor level dashboard - this would show the current monitor only latest issue and up time charts.  avg and percentile stats as well.
